--- a/src/app.html
+++ b/src/app.html
@@ -4,6 +4,12 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
+		<meta name="title" content="Tarok">
+		<meta name="description" content="Zapisovalec rezultatov za igro Tarok">
+		<meta name="keywords" content="tarok, smrekarjeve karte, računalo, orodje">
+		<meta name="robots" content="index, follow">
+		<meta name="language" content="Slovenian">
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
