--- a/src/app.html
+++ b/src/app.html
@@ -1,18 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="title" content="Tarok">
-		<meta name="description" content="Zapisovalec rezultatov za igro Tarok">
-		<meta name="keywords" content="tarok, smrekarjeve karte, računalo, orodje">
-		<meta name="robots" content="index, follow">
-		<meta name="language" content="Slovenian">
-		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-		%sveltekit.head%
-	</head>
-	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">%sveltekit.body%</div>
-	</body>
+<html class="dark" lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" href="%sveltekit.assets%/favicon.png" />
+    <meta name="viewport" content="width=device-width" />
+    <meta name="title" content="Tarok" />
+    <meta name="description" content="Zapisovalec rezultatov za igro Tarok" />
+    <meta name="keywords" content="tarok, smrekarjeve karte, računalo, orodje" />
+    <meta name="robots" content="index, follow" />
+    <meta name="language" content="Slovenian" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <link
+      rel="preload"
+      href="%sveltekit.assets%/fonts/Inter-VariableFont_slnt,wght.ttf"
+      as="font"
+      type="font/ttf"
+      crossorigin
+    />
+    %sveltekit.head%
+  </head>
+  <body data-sveltekit-preload-data="hover" data-theme="skeleton">
+    <div style="display: contents" class="h-full overflow-hidden">%sveltekit.body%</div>
+  </body>
 </html>
