Add title and favicon

--- a/src/app.html
+++ b/src/app.html
@@ -3,16 +3,31 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="%sveltekit.assets%/favicon.png" />
+  <link rel="apple-touch-icon" sizes="180x180" href="%sveltekit.assets%/apple-touch-icon.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="%sveltekit.assets%/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="%sveltekit.assets%/favicon-16x16.png" />
+  <link rel="manifest" href="%sveltekit.assets%/site.webmanifest" />
   <meta name="viewport" content="width=device-width" />
-  <meta name="title" content="Tarok" />
-  <meta name="description" content="Zapisovalec rezultatov za igro Tarok" />
   <meta name="keywords" content="tarok, smrekarjeve karte, računalo, orodje" />
   <meta name="robots" content="index, follow" />
   <meta name="language" content="Slovenian" />
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <link rel="preload" href="%sveltekit.assets%/fonts/Inter-VariableFont_slnt,wght.ttf" as="font" type="font/ttf"
     crossorigin />
+
+  <meta name="title" content="Tarok" />
+  <meta name="description" content="Zapisovalec rezultatov za igro Tarok" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://tarok.wgn.si" />
+  <meta property="og:title" content="Tarok" />
+  <meta property="og:description" content="Zapisovalec rezultatov za igro Tarok" />
+  <meta property="og:image" content="%sveltekit.assets%/android-chrome-512x512.png" />
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://tarok.wgn.si" />
+  <meta property="twitter:title" content="Tarok" />
+  <meta property="twitter:description" content="Zapisovalec rezultatov za igro Tarok" />
+  <meta property="twitter:image" content="%sveltekit.assets%/android-chrome-512x512.png" />
+
   %sveltekit.head%
 </head>
 
